# UrlShortenerTest

./: .gitignore  .vercelignore  README.md  alembic.ini  build.py  package.json  pyproject.toml  requirements.txt  vercel.json
frontend/: package.json  requirements.txt  tsconfig.json  vercel.json
frontend/src/@components/: AliasChips.tsx  Button.tsx  Input.tsx  SimpleIcons.tsx  Spinner.tsx
frontend/src/api/: api.ts  models.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/404/: page.tsx
frontend/src/app/[alias]/: page.tsx
frontend/src/app/not_found/: page.tsx
frontend/src/utils/: index.ts
migrations/: env.py
migrations/versions/: 3abfabf3e216_upgrade_to_sqlalchemy_2_0.py  edf45abba84b_add_created_at_and_updated_at_to_.py  eeaec1e12d28_initialize_db.py
src/: db.py  main.py  models.py  schemas.py  utils.py
